popup BstWaveEditor instead of BstSampleEditor.
Wed May 15 06:59:20 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstwaveview.c (popup_wave_dialog): popup BstWaveEditor
        instead of BstSampleEditor.

        * beast-gtk/bstwaveeditor.[hc]: implement qsampler display, and sane
        playback implementation. add zoom and vscale settings.

        * beast-gtk/bstplayback.c (bst_play_back_handle_stop): auto-uninstall
        pcm notify handler.
        (bst_play_back_handle_pcm_notify): ignore pcm notify request when
        not playing.

        * beast-gtk/gtklistwrapper.[hc]: new Gtk object implementing a
        GtkTreeModel for lists with cell value retrival via callbacks.

        * beast-gtk/bstwaveeditor.c: use GtkListWrapper instead of GtkListStore.

svn path=/trunk/; revision=440

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -90,6 +90,7 @@ beast_headers = $(strip \
 	bstxkb.h \
 	bstzoomedwindow.h \
 	glewidgets.h \
+	gtklistwrapper.h \
 )
 # BEAST c sources to build the program from
 beast_sources = $(strip \
@@ -146,6 +147,7 @@ beast_sources = $(strip \
 	bstzoomedwindow.c \
 	$(PROFILE_SOURCE) \
 	glewidgets.c \
+	gtklistwrapper.c \
 )
 # BEAST sources that get included (don't have own .lo rules)
 beast_extra_sources = $(strip \
