provide the procedure execution status from the procedure's BseErrorType
Mon May 27 08:34:28 2002  Tim Janik  <timj@gtk.org>

        * bseprocedure.c (call_proc): provide the procedure execution status
        from the procedure's BseErrorType output if any.

        * bseprocedure.[hc]: allow NULL values for
        bse_procedure_marshal_retval() and bse_procedure_unmarshal_retval().

        * bseserver.[hcp]*: added ::user-message signal with wrapper function
        bse_server_user_message(). added bse_server_run_remote() to start
        a script interpreter. added bse_server_queue_kill_wire() to kill the
        connection to a currently running child process. added interpreter
        wire dispatch source to handle remote connections from the main loop.
        renamed script-status to exec-status.

        * bsestorage.[hc]: fix precision in float/double value storage.
        fix validation of storage values to support G_PARAM_LAX_VALIDATION.

        * bseutils.[hc]: provide documentation for bse_search_path_*().

        * bswcommon.h[hc]: added bsw_register_scripts().
        moved bsw_type_name_to_sname() into this place.

        * bseplugin.[hc] (bse_plugin_dir_list_files): simply use
        bse_search_path_list_files() to find plugin libraries.

        * bseparam.c (param_note_validate): fix validation code to revert
        to BSE_NOTE_VOID.

        * bsemain.c (bse_init): record the current directory for spawning
        child processes.

        * bsemagictest.c (main): use bsw_register_plugins() to load plugins.

        * bsecategories.c (category_strip_toplevels): added /Scripts/ toplevel
        category.

        * bsescripthelper.[hc]: implementation of script registration (currently
        limited to scheme) and wrapper stubs to invoke script functions as
        BseProcedure.

        * bsecomwire.[hc]: implementation of communication stubs to spawn a
        child and talk with it through pipes.
        * bseprocedure.proc: implement

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -44,6 +44,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsebindata.h \
 	bsebiquadfilter.h \
 	bsecategories.h \
+	bsecomwire.h \
 	bseconfig.h \
 	bseconstant.h \
 	bsecontainer.h \
@@ -86,6 +87,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bseplugin.h \
 	bseprocedure.h \
 	bseproject.h \
+	bsescripthelper.h \
 	bseserver.h \
 	bsesnet.h \
 	bsesnooper.h \
@@ -120,6 +122,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsebindata.c \
 	bsebiquadfilter.c \
 	bsecategories.c \
+	bsecomwire.c \
 	bseconstant.c \
 	bsecontainer.c \
 	bsedatapocket.c \
@@ -159,6 +162,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bseplugin.c \
 	bseprocedure.c \
 	bseproject.c \
+	bsescripthelper.c \
 	bseserver.c \
 	bsesnet.c \
 	bsesnooper.c \
@@ -193,6 +197,7 @@ bse_proc_sources = @STRIP_BEGIN@ \
 	bsehelloworld.proc \
 	bseobject.proc \
 	bsepart.proc \
+	bseprocedure.proc \
 	bseproject.proc \
 	bseserver.proc \
 	bsesong.proc \
@@ -211,6 +216,7 @@ bse_proc_gen_sources = @STRIP_BEGIN@ \
 	bsehelloworld.gen-proc.c \
 	bseobject.gen-proc.c \
 	bsepart.gen-proc.c \
+	bseprocedure.gen-proc.c \
 	bseproject.gen-proc.c \
 	bseserver.gen-proc.c \
 	bsesong.gen-proc.c \
