remove hack to set the status bar after procedure execution, BseServer
Mon May 27 06:58:30 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstprocedure.c (bst_procedure_shell_execute): remove hack
        to set the status bar after procedure execution, BseServer signals this.

        * beast-gtk/bstprocedure.[hc]: added new functions to fire
        up the procedure execution dialog non-modal.

        * beast-gtk/bstutils.[hc]: added new stock icon types (from gtk)
        for info/question/warning/error dialogs. added convenience
        function gtk_tree_view_append_text_columns() to reduce code
        duplication.
        (bst_wrap_text_create):allow text to be horizontally centered.

        * beast-gtk/bstapp.[hc]: support procedure browser.

        * beast-gtk/bstdialog.[hc]: added functions to change dialog
        flags.

        * beast-gtk/bstmain.c: register scripts together with plugins
        and setup user-message handlers.

        * beast-gtk/bstusermessage.[hc]: install a BseServer handler to
        popup message dialogs upon request (with various types: INFO,
        QUESTION, WARNING and ERROR).

        * beast-gtk/bstprocbrowser.[hc]: fire up a browsing dialog, listing
        all BSE procedures.

        * Makefile.am: define BSW_PATH_SCRIPTS (path where script files
        reside) and BSW_PATH_BINARIES (path where the bswshell interpreter
        resides).

        * bsw-shell/bswshell.c: added argument parser to support:
        --g-fatal-warnings: make glib warnings fatal.
        --bse-command-pipe: setup input/output pipes when being invoked
          remotely.
        --bse-enable-register: enable script function registration for
          the remote invokation case.
        --bse-enable-server: enable bsw-server function, either for the
          remote case when not registering scripts, or (automatically
          enabled) for the standalone case.
        -p: register plugins upon startup (could be auto-enabled for the
    

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,8 @@ PKG_paths.h: $(top_srcdir)/configure Makefile
 	&& echo "/* Generated data from $< (by make $@) */" > xgen-pph \
 	&& echo >> xgen-pph \
 	&& echo "#define BSE_PATH_PLUGINS      \"${bseplugindir}\"" >> xgen-pph \
+	&& echo "#define BSW_PATH_SCRIPTS      \"${bswscriptdir}\"" >> xgen-pph \
+	&& echo "#define BSW_PATH_BINARIES     \"${bindir}\"" >> xgen-pph \
 	&& echo "#define BST_PATH_DOCS         \"${beastdocsdir}\"" >> xgen-pph \
 	&& echo "#define BST_PATH_DATA_SAMPLES \"${beastsampledatadir}\"" >> xgen-pph \
 	&& echo >> xgen-pph \
