new object, emitting notification of incomming MIDI events.
Thu Jun 13 07:28:34 2002  Tim Janik  <timj@gtk.org>

        * bsemidinotifier.[hcp]*: new object, emitting notification of incomming
        MIDI events.

        * bsescriptcontrol.[hcp]*: new object, proxying running scripts and
        allowing for user side control of scripts.

        * *.c: more i/o channel name fixups.

        * bsebindata.c: code cleanups.

        * bsecategories.c: check type name syntax.

        * bsecomwire.[hc]: removed temporary hacks, slight fixup to
        random request id generation.

        * bsecontainer.proc: added lookup procedure to find a named child
        of a container.

        * *.proc: const cleanups.

        * bseenums.[hc]: added user error enum values.

        * bseitem.proc: added is_a check procedure.

        * bsemidimodule.c:
        * bsemididevice-oss.c: changes due to new timestamped and thread-safe
        MIDI decoder API.

        * bsemidievent.[hc]: midi decoder API extensions to provide
        time stamped MIDI events. explicitely marked mutex-affected
        functions and implemented thread-safety measures.

        * bseobject.[hc] (bse_object_do_dispose): set the
        BSE_OBJECT_FLAG_DISPOSED flag on objects, since we don't support
        resurrection in general.
        (bse_object_class_add_dsignal): allow addition of detailed signals.
        (bse_object_from_id): don't hand out disposed objects.

        * bseparasite.c: fixed string-escaping bug.

        * bsepart.[hc]: for now, limit the maximum tick count to 0x7fffffff,
        which is a valid signed integer.

        * bsescripthelper.[hc]: properly support the GslGlue layer and
        BseScriptControl.

        * bseserver.[hcp]*: support container usage of the server.
        moved script handling into bsescriptcontrol.c.
        implment procedure to retrive a MIDI notifier obejct.

        * bsesongthread.c: silence debugging output.

        * bsesource.proc: al

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -62,6 +62,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bseexports.h \
 	bsegconfig.h \
 	bseglobals.h \
+	bseglue.h \
 	bseinstrument.h \
 	bseitem.h \
 	bsemain.h \
@@ -72,6 +73,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsemididevice-oss.h \
 	bsemidievent.h \
 	bsemidimodule.h \
+	bsemidinotifier.h \
 	bsemidisynth.h \
 	bsemidisynthinput.h \
 	bseobject.h \
@@ -87,6 +89,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bseplugin.h \
 	bseprocedure.h \
 	bseproject.h \
+	bsescriptcontrol.h \
 	bsescripthelper.h \
 	bseserver.h \
 	bsesnet.h \
@@ -137,6 +140,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bseenums.c \
 	bsegconfig.c \
 	bseglobals.c \
+	bseglue.c \
 	bseinstrument.c \
 	bseitem.c \
 	bsemain.c \
@@ -147,6 +151,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsemididevice-oss.c \
 	bsemidievent.c \
 	bsemidimodule.c \
+	bsemidinotifier.c \
 	bsemidisynth.c \
 	bsemidisynthinput.c \
 	bseobject.c \
@@ -162,6 +167,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bseplugin.c \
 	bseprocedure.c \
 	bseproject.c \
+	bsescriptcontrol.c \
 	bsescripthelper.c \
 	bseserver.c \
 	bsesnet.c \
@@ -195,10 +201,13 @@ bse_proc_sources = @STRIP_BEGIN@ \
 	bseeditablesample.proc \
 	bseenums.proc \
 	bsehelloworld.proc \
+	bsemidinotifier.proc \
 	bseobject.proc \
 	bsepart.proc \
 	bseprocedure.proc \
 	bseproject.proc \
+	bsescriptcontrol.proc \
+	bsescripthelper.proc \
 	bseserver.proc \
 	bsesong.proc \
 	bsesource.proc \
@@ -214,10 +223,13 @@ bse_proc_gen_sources = @STRIP_BEGIN@ \
 	bseenums.gen-proc.c \
 	bseeditablesample.gen-proc.c \
 	bsehelloworld.gen-proc.c \
+	bsemidinotifier.gen-proc.c \
 	bseobject.gen-proc.c \
 	bsepart.gen-proc.c \
 	bseprocedure.gen-proc.c \
 	bseproject.gen-proc.c \
+	bsescriptcontrol.gen-proc.c \
+	bsescripthelper.gen-proc.c \
 	bseserver.gen-proc.c \
 	bsesong.gen-proc.c \
 	bsesource.gen-proc.c \
