more scheme function definitions.
Thu Jun 13 07:29:20 2002  Tim Janik  <timj@gtk.org>

        * bsw-boilerplate.scm.x: more scheme function definitions.

        * bswscminterp.[hc]: new binding implementation, based on the
        GSL Glue layer. we use an extra SMOB type to hook into the
        garbage collector now.

        * bswshell.c: support startup suspension via BSW_SHELL_SLEEP4GDB=1.
        adaptions to new bswscminterp.h.

        * progressor-example.scm: procedure fixes.

        * got rid of the old C glue generation code.

svn path=/trunk/; revision=464

--- a/bsw-shell/Makefile.am
+++ b/bsw-shell/Makefile.am
@@ -8,32 +8,24 @@ INCLUDES = -I$(top_srcdir) $(BSW_SHELL_CFLAGS) -DG_DISABLE_CONST_RETURNS
 #
 # built sources
 #
-built_sources = bswscm-genglue.c
+built_sources = # bswscm-genglue.c
 MAINTAINERCLEANFILES += $(built_sources)
 EXTRA_DIST += $(built_sources)
 # temporary build files
 gen_sources = xgen-bsggc
 CLEANFILES += $(gen_sources)
-# autogeneration rules
-$(srcdir)/bswscm-genglue.c: mkglue
-	$(top_builddir)/bsw-shell/mkglue --body >xgen-bsggc \
-	&& cp xgen-bsggc $(srcdir)/bswscm-genglue.c \
-	&& rm -f xgen-bsggc
 
 #
 # programs to build
 #
-noinst_PROGRAMS = mkglue
 bin_PROGRAMS = bswshell
 # libraries to link programs against
 programs_ldadd = $(top_builddir)/bse/libbse.la $(top_builddir)/bsw/libbsw.la
 # source setups
-mkglue_SOURCES = mkglue.c
-mkglue_LDADD = $(programs_ldadd)
-bswshell_SOURCES = bswshell.c bswscmhandle.c bswscminterp.c
+bswshell_SOURCES = bswshell.c bswscminterp.c
 bswshell_LDADD = $(programs_ldadd) $(BSW_SHELL_LIBS)
-bswscminterp.c: bswscm-genglue.c
-EXTRA_DIST += bswscmhandle.h
+bswscminterp.c: # bswscm-genglue.c
+EXTRA_DIST += # bswscmhandle.h
 
 
 #
