new internal module which merges signal outputs of multiple module
Mon Jul 15 05:07:37 2002  Tim Janik  <timj@gtk.org>

	* bsecontextmerger.[hc]: new internal module which merges signal
	outputs of multiple module contexts.

	* bsemidimodule.[hc]:
	* bsemidisynthinput.[hc]: remove old midi voice implementation modules.

	* bsetrack.[hc]: first start at implementing tracks for songs, which
	arrange song parts.

	* bsemidivoice.[hc]: internal wrapper objects for midi receiver modules.

	* bsecontainer.[hc]: added class method to list children for context
	creation propagation (overriden by BseSNet context branch
	implementation).

	* bseenums.[hc]: remove MIDI related enums.

	* bseglobals.[hc]:
	* gslcommon.[hc] (gsl_init):
	fix MIDI note number for kammer note.

	* bseglue.[hc]: support boxed->GslGlueSequence conversions. fix up
	record and sequence usage.

	* *midi*.[hc]: remove old BseMidiDecoder code.

	* bsemidievent.[hc]: remove old MIDI channel/note/decoder implementations.
	use float values for MIDI event fields.
	add event constructors, remove global MIDI notifier hook.
	add MIDI_SIGNAL enum and default values for the various control
	signals supported per midi channel.

	* bsemidiicontroller.[hc]: adaptions to work with the new MIDI_SIGNAL
	enum and MidiReceiver.

	* bsemidinotifier.[hc]: adaptions to work with the new MidiREceiver.

	* bsemidireceiver.[hc]: actually deploy the new midi receiver
	implementation. added event processing implementation, support float
	values for midi event fields.
	(bse_midi_receiver_push_data): translate system time to engine ticks
	here. process newly enqueued events (this might need to change).
	add API to push and process event structures.
	implement midi control value module.
	reimplement midi voice and switch modules, make use of the engine's
	new virtual module implementation.
	implement midi notifier hooks per midi receiver.
	support continuous midi controls (convert LSB and MSB part to float).
	support "all sound off"

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -48,6 +48,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bseconfig.h \
 	bseconstant.h \
 	bsecontainer.h \
+	bsecontextmerger.h \
 	bsedatapocket.h \
 	bsedefs.h \
 	bseeditablesample.h \
@@ -72,11 +73,9 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsemididevice-null.h \
 	bsemididevice-oss.h \
 	bsemidievent.h \
-	bsemidimodule.h \
 	bsemidinotifier.h \
 	bsemidireceiver.h \
 	bsemidisynth.h \
-	bsemidisynthinput.h \
 	bseobject.h \
 	bsepart.h \
 	bsepcminput.h \
@@ -107,8 +106,10 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsesuboport.h \
 	bsesubsynth.h \
 	bsesuper.h \
+	bsetrack.h \
 	bsetype.h \
 	bseutils.h \
+	bsemidivoice.h \
 	bsewave.h \
 	bsewaveosc.h \
 	bsewaverepo.h \
@@ -129,6 +130,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsecomwire.c \
 	bseconstant.c \
 	bsecontainer.c \
+	bsecontextmerger.c \
 	bsedatapocket.c \
 	bseeditablesample.c \
 	bseeffect.c \
@@ -151,11 +153,9 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsemididevice-null.c \
 	bsemididevice-oss.c \
 	bsemidievent.c \
-	bsemidimodule.c \
 	bsemidinotifier.c \
 	bsemidireceiver.c \
 	bsemidisynth.c \
-	bsemidisynthinput.c \
 	bseobject.c \
 	bsepart.c \
 	bsepcminput.c \
@@ -186,8 +186,10 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsesuboport.c \
 	bsesubsynth.c \
 	bsesuper.c \
+	bsetrack.c \
 	bsetype.c \
 	bseutils.c \
+	bsemidivoice.c \
 	bsewave.c \
 	bsewaveosc.c \
 	bsewaverepo.c \
