quick script to record midi notes into a BsePart.
Mon Jul 15 07:18:40 2002  Tim Janik  <timj@gtk.org>

        * bsw-shell/record-midi.scm (record-midi): quick script to record midi notes
        into a BsePart.

        * beast-gtk/bstdragutils.[hc]: start at implementing necessary utilities
        for widget implementations that support mouse dragging APIs (and auto-
        scrolling).

        * beast-gtk/bstpianorollctrl.[hc]: piano roll controller implementation
        (insertion, selection, resizing, movement, deletion etc. of notes).

        * beast-gtk/bsttoolbar.[hc]: quick toolbar implementation based on
        standard widgets. this gets rid of lots of problems with GtkToolbar
        and supports drop-down selection tool items.

        * beast-gtk/bsttrackview.[hc]: view for BseTracks withint BseSong
        shells.

        * beast-gtk/bstpartdialog.[hc]: moved piano roll controller code into
        bstpianorollctrl.[hc]. extend button3 menu with piano roll tools. add
        hzoom, use new toolbar, add note length and quantization selections.
        configure piano roll ctrl tools.

        * beast-gtk/bstpianoroll.[hc]: implement new drag API. added auto
        scrolling, support selections and implement proper boundary (highest/
        lowest frequency) checks.

        * beast-gtk/bstradiotools.[hc]: support BstToolbar.

        * beast-gtk/bstsongshell.[hc]: support BstTrackView.

        * beast-gtk/icons/*note*:
        * beast-gtk/bstutils.[hc]: added new stock items for note length
        and quantization selection.

        * bsw-shell/bswscminterp.[hc]: implement GslGlueRec as SCM smob
        with named field accessor. use GslGlueSeq of rproc/signal arguments.

svn path=/trunk/; revision=473

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -45,6 +45,7 @@ beast_headers = $(strip \
 	bstdefs.h \
 	bstdial.h \
 	bstdialog.h \
+	bstdragutils.h \
 	bsteffectview.h \
 	bstfiledialog.h \
 	bstfreeradiobutton.h \
@@ -64,6 +65,7 @@ beast_headers = $(strip \
 	bstpatterneditor.h \
 	bstpatternview.h \
 	bstpianoroll.h \
+	bstpianorollctrl.h \
 	bstplayback.h \
 	bstplaylist.h \
 	bstpreferences.h \
@@ -81,6 +83,8 @@ beast_headers = $(strip \
 	bstsnetrouter.h \
 	bstsongshell.h \
 	bststatusbar.h \
+	bsttoolbar.h \
+	bsttrackview.h \
 	bstsupershell.h \
 	bstusermessage.h \
 	bstutils.h \
@@ -103,6 +107,7 @@ beast_sources = $(strip \
 	bstcontrollers.c \
 	bstdial.c \
 	bstdialog.c \
+	bstdragutils.c \
 	bsteffectview.c \
 	bstfiledialog.c \
 	bstfreeradiobutton.c \
@@ -122,6 +127,7 @@ beast_sources = $(strip \
 	bstpatterneditor.c \
 	bstpatternview.c \
 	bstpianoroll.c \
+	bstpianorollctrl.c \
 	bstplayback.c \
 	bstplaylist.c \
 	bstpreferences.c \
@@ -139,6 +145,8 @@ beast_sources = $(strip \
 	bstsnetrouter.c \
 	bstsongshell.c \
 	bststatusbar.c \
+	bsttoolbar.c \
+	bsttrackview.c \
 	bstsupershell.c \
 	bstusermessage.c \
 	bstutils.c \
