add clipboard functions to toolbar, cut/copy/paste and clear.
Sun Jul 21 21:16:22 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstpartdialog.[hc]: add clipboard functions to toolbar,
        cut/copy/paste and clear.

        * beast-gtk/bstpianoroll.[hc]: slight note colorization changes, support
        view-only selection rectangle. add function to retrive paste position.
        remove controller-specific drag data.

        * beast-gtk/bstpianorollctrl.[hc]: add clipborad support add
        per-controller drag data. support selection group moves.

        * beast-gtk/bsttoolbar.[hc]: support stock images.

        * beast-gtk/bsttrackview.[hc]: fixup track image.

        * beast-gtk/bstutils.[hc]:
        * beast-gtk/icons/*: added new icons: music clipboard cut/copy/paste,
        track and trash-scissors.

svn path=/trunk/; revision=477

--- a/beast-gtk/icons/Makefile.am
+++ b/beast-gtk/icons/Makefile.am
@@ -10,6 +10,7 @@ EXTRA_DIST += @STRIP_BEGIN@ \
 SRC_IMAGES = @STRIP_BEGIN@	\
 	aguitar.xcf		\
 	cdrom.xcf		\
+	clipboard.xcf		\
 	editor.xcf		\
 	knob.xcf		\
 	mouse_tool.xcf		\
@@ -21,8 +22,10 @@ SRC_IMAGES = @STRIP_BEGIN@	\
 	pattern-group.xcf	\
 	pattern-tool.xcf	\
 	pattern.xcf		\
+	railway.xcf		\
 	rect-select.xcf		\
 	target.xcf		\
+	trash-scissors.xcf	\
 	trashcan.xcf		\
 	vert-select.xcf		\
 	wave.xcf		\
@@ -37,6 +40,9 @@ STOCK_IMAGE_PAIRS = @STRIP_BEGIN@ \
 	stock_instrument		$(srcdir)/aguitar.png		\
 	stock_knob			$(srcdir)/knob.png		\
 	stock_mouse_tool		$(srcdir)/mouse_tool.png	\
+	stock_music_cut			$(srcdir)/music-cut.png		\
+	stock_music_copy		$(srcdir)/music-copy.png	\
+	stock_music_paste		$(srcdir)/music-paste.png	\
 	stock_no_ilink			$(srcdir)/no_ilink.png		\
 	stock_no_olink			$(srcdir)/no_olink.png		\
 	stock_no_icon			$(srcdir)/noicon.png		\
@@ -58,11 +64,13 @@ STOCK_IMAGE_PAIRS = @STRIP_BEGIN@ \
 	stock_qnote_4			$(srcdir)/qnote-4.png		\
 	stock_qnote_8			$(srcdir)/qnote-8.png		\
 	stock_qnote_16			$(srcdir)/qnote-16.png		\
+	stock_railway			$(srcdir)/railway.png		\
 	stock_rect_select		$(srcdir)/rect-select.png	\
 	stock_small_audio		$(srcdir)/small-audio.png	\
 	stock_small_noaudio		$(srcdir)/small-noaudio.png	\
 	stock_target			$(srcdir)/target.png		\
 	stock_trashcan			$(srcdir)/trashcan.png		\
+	stock_trash_scissors		$(srcdir)/trash-scissors.png	\
 	stock_vert_select		$(srcdir)/vert-select.png	\
 	stock_wave			$(srcdir)/wave.png		\
 	stock_wave_tool			$(srcdir)/wave-tool.png		\
