remove (currently) unused code from build setup: BseInstrument,
Tue Jul 23 07:47:55 2002  Tim Janik  <timj@gtk.org>

        * bse.h:
        * Makefile.am: remove (currently) unused code from build setup:
        BseInstrument, BseEffect*, BsePattern*.

        * bseconstvalues.[hc]: new files, taking over many constants and note
        related macro definitions from bseglobals.[hc].

        * bsemain.c: initialize GSL with proper kammer frequency/note.

        * bseutils.[hc]: removed duplicated constants, added
        bse_note_fine_tune_from_note_freq ().

        * bswcommon.[hc] bswprivate.h: change BswPartNote to have a note
        and a fine_tune field instead of frequency.

        * bsetype.h:
        * bseparam.[hc]: don't introduce BSE_TYPE_NOTE as fundamental
        type, having a pspec variant is sufficient. added convnience
        function to easily create pspecs for notes and frequencies.

        * bsesongthread.c:
        * bsepart.[hcp]*: ported this over from using frequencies to
        using notes.

        * bsesong.[hcp]*: remove dependancies on unused code.

        * bsemath.h: added more accurate constants for 2^(1/12),
        ln(2^(1/12)) and ln(2^(1/1200)), minor cleanups.

        * bseglobals.[hc]: removed math constants. provide a constant,
        high-accuracy semitone factor table and fine tune factor table
        at compile time. got rid of 16bit-fixed semitone factor table.
        removed lots of MIN/MAX defines, note, fine tune and frequency
        macros.

        * bseglue.c: BseNote fixes.

        * bseconstant.[hc]: remove unused sequencer methods.

        * *.c: constant fixes/adaptions, use new param spec constructors.

        * bseinfo.c: added lots of (inactive) debugging code to check
        note/frequency/table validity.

svn path=/trunk/; revision=478

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -47,24 +47,17 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsecomwire.h \
 	bseconfig.h \
 	bseconstant.h \
+	bseconstvalues.h \
 	bsecontainer.h \
 	bsecontextmerger.h \
 	bsedatapocket.h \
 	bsedefs.h \
 	bseeditablesample.h \
-	bseeffect.h \
-	bseeffectbalance.h \
-	bseeffectfinetune.h \
-	bseeffectnotevolume.h \
-	bseeffectpatternbreak.h \
-	bseeffectpatternjump.h \
-	bseeffectvolumedelta.h \
 	bseenums.h \
 	bseexports.h \
 	bsegconfig.h \
 	bseglobals.h \
 	bseglue.h \
-	bseinstrument.h \
 	bseitem.h \
 	bsemain.h \
 	bsemath.h \
@@ -82,8 +75,6 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsepcmoutput.h \
 	bseparam.h \
 	bseparasite.h \
-	bsepattern.h \
-	bsepatterngroup.h \
 	bsepcmdevice.h \
 	bsepcmdevice-oss.h \
 	bseplugin.h \
@@ -129,22 +120,15 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsecategories.c \
 	bsecomwire.c \
 	bseconstant.c \
+	bseconstvalues.c \
 	bsecontainer.c \
 	bsecontextmerger.c \
 	bsedatapocket.c \
 	bseeditablesample.c \
-	bseeffect.c \
-	bseeffectbalance.c \
-	bseeffectfinetune.c \
-	bseeffectnotevolume.c \
-	bseeffectpatternbreak.c \
-	bseeffectpatternjump.c \
-	bseeffectvolumedelta.c \
 	bseenums.c \
 	bsegconfig.c \
 	bseglobals.c \
 	bseglue.c \
-	bseinstrument.c \
 	bseitem.c \
 	bsemain.c \
 	bsemath.c \
@@ -162,8 +146,6 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsepcmoutput.c \
 	bseparam.c \
 	bseparasite.c \
-	bsepattern.c \
-	bsepatterngroup.c \
 	bsepcmdevice.c \
 	bsepcmdevice-oss.c \
 	bseplugin.c \
@@ -245,7 +227,6 @@ bse_proc_gen_sources = @STRIP_BEGIN@ \
 @STRIP_END@
 # c sources for builtin plugins
 bse_builtin_c_sources = @STRIP_BEGIN@ \
-	bsepattern.proc.c \
 	$(bse_proc_gen_sources) \
 @STRIP_END@
 # non-compile and non-install sources required
