add --print-path option to print a path to stdout on demand, print help
Sat Jul 27 13:30:39 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstmain.c (bst_parse_args): add --print-path option
        to print a path to stdout on demand, print help and version to
        stdout (not stderr).

svn path=/trunk/; revision=489

--- a/configure.in
+++ b/configure.in
@@ -269,15 +269,13 @@ AC_DEFUN(AC_BEAST_REQUIREMENTS,
     AC_DEFINE_UNQUOTED(BST_VERSION_HINT, "$BST_VERSION_HINT")
     AC_DEFINE_UNQUOTED(BST_VERSION_STABLE, $BST_VERSION_STABLE)
 
-
-    # BEAST data from beast-data package
+    # BEAST resource paths
     beastbasedir=\${datadir}/beast
-    beastdatadir=$beastbasedir/data-v$BEAST_DATA_VERSION
-    beastsampledatadir=$beastdatadir/samples
-
-    # MINOR version specific data
     beastdocsdir=$beastbasedir/v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION/docs
     beastimagesdir=$beastbasedir/v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION/images
+    # beast-data package path
+    beastdatadir=$beastbasedir/data-v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION
+    beastsampledatadir=$beastdatadir/samples
 
     AC_SUBST(beastsampledatadir)
     AC_SUBST(beastdocsdir)
